# Quant-Foundry

./: .env.example  .gitignore  PLAN.md  README.md  push_to_github.cmd  pyproject.toml
deploy/: README.md  crypto.env
ontology/crypto-pack/: README.md  pack.yaml
ontology/crypto-pack/actions/: link-exchange-token.yaml  link-fund-backs-protocol.yaml  link-fund-holding.yaml  link-protocol-chain.yaml  link-token-chain.yaml  link-wallet-transfer.yaml  record-chain-metric.yaml  record-dev-activity.yaml  record-holding.yaml  record-price-observation.yaml  record-regulatory-filing.yaml  record-sentiment.yaml  record-tvl-observation.yaml  record-unlock-event.yaml  record-whale-transfer.yaml  register-chain.yaml  register-exchange.yaml  register-fund.yaml  register-protocol.yaml  register-token.yaml  register-wallet.yaml
ontology/crypto-pack/permissions/: crypto-roles.fga
ontology/crypto-pack/schema/: actions.odl  entities.odl  enums.odl  links.odl  (+1 more)
research/: firecrawl.md  github-openfoundry-nautilus.md  github-quanthedgefund-alphascanner.md  liquid-trade-coinvest-ai.md  open-foundry-strategic-advantage.md  perigon-plan.md  quiverquant-data-landscape.md  survivorship-free-universe.md
scripts/: collect_news.cmd
src/quiverquant/: cli.py  config.py  storage.py
tests/: test_backfill_defillama.py  test_backfill_github.py  test_backtest_data.py  test_backtest_harness.py  test_binance_vision.py  test_cmc_snapshots.py  test_cross_section.py  test_graph_features.py  test_momentum.py  test_ontology_mapping.py  test_pit_momentum.py  test_token_resolve.py  test_wayback.py
(+42 files in other folders)
