[project]
name = "quiverquant"
version = "0.1.0"
description = "Free-data crypto alt-data engine (QuiverQuant clone, crypto-scoped)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "ccxt>=4.4",
    "duckdb>=1.1",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "nautilus-trader>=1.221.0",
    "pandas>=2.2",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiverquant"]

[project.scripts]
quiverquant = "quiverquant.cli:main"
